[tool.poetry]
name = "server"
version = "0.1.3"
description = "clairBuoyant Server"
authors = ["Kyle J. Burda <47502769+kylejb@users.noreply.github.com>"]

[tool.poetry.dependencies]
alembic = "^1.14.0"
asyncpg = "^0.30.0"
fastapi = "^0.115.6"
GeoAlchemy2 = "^0.17.0"
greenlet = "^3.1.1"
gunicorn = "^23.0.0"
pybuoy = "^0.5.7"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
python = ">=3.11, <4.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
Shapely = "^2.0.6"
SQLAlchemy = "^2.0.37"
uvicorn = "^0.34.0"

[tool.poetry.dev-dependencies]
coverage = { version = "7.6.10", extras = ["toml"]}
httpx = "^0.28.1"
mypy = "^1.14.1"
pre-commit = "^4.1.0"
pytest-asyncio = "^0.25.2"
pytest-cov = "^6.0.0"
pytest = "^8.3.4"
ruff = "^0.9.3"

[tool.poetry.scripts]
bootstrap="scripts.poetry_entrypoint:bootstrap"
check="scripts.poetry_entrypoint:check"
clean="scripts.poetry_entrypoint:clean"
coverage="scripts.poetry_entrypoint:coverage"
db-create="scripts.poetry_entrypoint:create"
db-docker="scripts.poetry_entrypoint:docker"
db-migrations_autogenerate="scripts.poetry_entrypoint:migrations_autogenerate"
db-migrations_run="scripts.poetry_entrypoint:migrations_run"
db-migrations_undo="scripts.poetry_entrypoint:migrations_undo"
db-seeds="scripts.poetry_entrypoint:seeds"
dotenv="scripts.poetry_entrypoint:dotenv"
init="scripts.poetry_entrypoint:init"
lint="scripts.poetry_entrypoint:lint"
setup="scripts.poetry_entrypoint:setup"
start="scripts.poetry_entrypoint:start"
test="scripts.poetry_entrypoint:test"
uninstall="scripts.poetry_entrypoint:uninstall"

[tool.ruff]
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  "htmlcov",
  "venv",
  ".venv",
]
line-length = 88
target-version = "py311"

[tool.coverage]
# https://github.com/nedbat/coveragepy
  [tool.coverage.run]

  source = ["server"]
  branch = true
  omit = ['']

  [tool.coverage.report]
  exclude_lines = [
    "# noqa",
    "# pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
  ]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
asyncio_mode = "strict"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
